<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zego.audioroomdemo.activities.SessionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_communicate_action"
                style="@style/NormalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/zg_start_communicate"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/btn_mute"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                style="@style/NormalButton"
                android:text="@string/zg_btn_text_mute"
                android:enabled="false" />

            <Button
                android:id="@+id/btn_microphone"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                style="@style/NormalButton"
                android:text="@string/zg_btn_text_mic_off"
                android:enabled="false" />

            <Button
                android:id="@+id/btn_aux"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                style="@style/NormalButton"
                android:text="@string/zg_btn_text_aux"
                android:enabled="false" />

            <Button
                android:id="@+id/btn_recorder"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                style="@style/NormalButton"
                android:text="@string/zg_btn_text_record_on"
                android:enabled="false"
                android:visibility="gone"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_event_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <ListView
            android:id="@+id/stream_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp">

        </ListView>

        <TextView
            android:id="@+id/empty_data_tip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/zg_tip_no_stream" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentBottom="true"
        android:background="#66e5e5e5"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            style="@style/NormalButton"
            android:text="Send"/>
        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_horizontal"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/btn_send"
            android:layout_alignBaseline="@id/btn_send"
            android:maxLines="5"
            android:hint="Input text message: "/>
        <ListView
            android:id="@+id/lv_messages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@id/btn_send"/>
    </RelativeLayout>

</RelativeLayout>
